@@ -1,3 +1,11 @@
+2012-12-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	bug #37942: Latest SVN can't program in dragon_jtag mode
+	* jtagmkII.c (jtagmkII_initialize): For Xmega devices, and
+	firmware >= 7.x, don't trigger a RESET, in order to work around a
+	firmware bug that appears to be present in at least firmware 7.24
+	for the Dragon.
+
 2012-12-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* config_gram.y: Implement the "ocdrev" keyword
